Persist runtime-baked heads across server restarts (#11)
Co-authored-by: Claude <noreply@anthropic.com>